--- a/app/globals.css
+++ b/app/globals.css
@@ -50,7 +50,6 @@
   }
 }
 
- 
 @layer base {
   * {
     @apply border-border;
@@ -58,4 +57,23 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+/* Required? */
+@media (prefers-color-scheme: dark) {
+  :root {
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 0, 0, 0;
+    --background-end-rgb: 0, 0, 0;
+  }
+}
+
+body {
+  color: rgb(var(--foreground-rgb));
+  background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
 }
